Task #1: Add favorite products

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -120,11 +120,11 @@ img {
   }
 }
 
-.cart {
+.cart, .favorite-products {
   position: relative;
 }
 
-.cartCounter {
+.counter {
   position: absolute;
   right: -21px;
   top: -10px;
@@ -173,4 +173,9 @@ img {
   &:not(:last-child) {
     margin-bottom: 30px;
   }
+}
+
+.header__buttons {
+  display: flex;
+  gap: 40px;
 }
